# end-point-prediction

./: README.md  RGBDE_dataplayer.xml  RGBDE_dumper.xml  RGBDE_visualizer.xml  Track_and_Predict.xml  automatic_acquisition_camera.sh  automatic_acquisition_onlyRightCamera.sh  ball_demo.xml  compare_real2sim.py  compare_sim2real.py  helper_scripts.txt  plot_dataset_trajectories.py  plot_realTrajectory_and_predictions.py  stat_analysis.py
COMtracker/: CMakeLists.txt  COMtracker.cpp  COMtracker.cpp.old
PandaControl/: .gitignore  CMakeLists.txt  armControl.cpp  armControl.ini  panda-control.cpp  panda-control.h
asynch_trajectories/: asynch_traj_00001000.txt  asynch_traj_00001021.txt  asynch_traj_00001032.txt  asynch_traj_00001035.txt  asynch_traj_00001036.txt  asynch_traj_00001042.txt  asynch_traj_00001043.txt  asynch_traj_00001050.txt  asynch_traj_00001066.txt  asynch_traj_00001068.txt  asynch_traj_00001077.txt  asynch_traj_00001079.txt  asynch_traj_0000108.txt  asynch_traj_00001083.txt  asynch_traj_00001085.txt  asynch_traj_00001088.txt  asynch_traj_0000109.txt  asynch_traj_00001090.txt  asynch_traj_00001098.txt  asynch_traj_0000110.txt  asynch_traj_00001105.txt  asynch_traj_00001107.txt  asynch_traj_00001109.txt  asynch_traj_00001127.txt  asynch_traj_0000113.txt  asynch_traj_00001136.txt  asynch_traj_00001144.txt  asynch_traj_00001145.txt  asynch_traj_00001150.txt  asynch_traj_00001152.txt  asynch_traj_00001154.txt  asynch_traj_00001156.txt  asynch_traj_00001161.txt  asynch_traj_00001162.txt  asynch_traj_00001167.txt  asynch_traj_00001173.txt  asynch_traj_00001178.txt  asynch_traj_00001184.txt  asynch_traj_00001185.txt  asynch_traj_00001194.txt  (+1195 more)
deprecate/: preprocess_trajectories.py
real_trajectories/: real_traj_00001.txt  real_traj_00002.txt  real_traj_00003.txt  real_traj_00005.txt  real_traj_00007.txt  real_traj_00009.txt  real_traj_00012.txt  real_traj_00014.txt  real_traj_00015.txt  real_traj_00016.txt  real_traj_00017.txt  real_traj_00023.txt  real_traj_00024.txt  real_traj_00026.txt  real_traj_00029.txt  real_traj_00032.txt  real_traj_00034.txt  real_traj_00035.txt  real_traj_00036.txt  real_traj_00040.txt  real_traj_00041.txt  real_traj_00043.txt  real_traj_00044.txt  real_traj_00045.txt  real_traj_00049.txt  real_traj_00050.txt  real_traj_00052.txt  real_traj_00054.txt  real_traj_00055.txt  real_traj_00057.txt  real_traj_00058.txt  real_traj_00059.txt  real_traj_00062.txt  real_traj_00063.txt  real_traj_00066.txt  real_traj_00069.txt  real_traj_00071.txt  real_traj_00072.txt  real_traj_00074.txt  (+17 more)
vPredictor/: 150neurs_10000epochs_Shift_LSTM_gpu_fromRight_stateful.json  200neurs_fdeep_model.json  300neurs_fdeep_model.json  CMakeLists.txt  vPredictor.cpp  vPredictor.xml
(+6633 files in other folders)
